--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "axios": "^1.7.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
